--- a/source/_includes/custom/asides/lastfm.html
+++ b/source/_includes/custom/asides/lastfm.html
@@ -16,6 +16,6 @@
     }
   </script>
   <div id="lastfm"></div>
-  <script type="text/javascript" src="http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=alec929&format=json&limit=3&api_key=dd446cc07133de4fadac35b1d2b5e7cc&amp;callback=getRecentLastfmTracks"></script>
-  <a href="http://www.last.fm/user/alec929">@alec929</a> on Last.fm
+  <script type="text/javascript" src="http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&amp;user={{ site.lastfm_user }}&amp;format=json&amp;limit={{ site.lastfm_count }}&amp;api_key={{ site.lastfm_api }}&amp;callback=getRecentLastfmTracks"></script>
+  <a href="http://www.last.fm/user/{{ site.lastfm_user }}">@{{ site.lastfm_user }}</a> on Last.fm
 </section>
